fix: package.json
Signed-off-by: sunrabbit123 <qudwls185@naver.com>

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "main": "./index.ts",
   "bin": "./bin/index.js",
+  "packageManager": "pnpm@10.6.4",
   "files": [
     "LICENSE",
     "README.md",
